--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
     <h1>Home</h1>
     <p>Welcome to the home page.</p>
-    <p>About</a></p>
+    <p>About me: <a href="pages/aboutme.html">About Me</a></p>
 </body>
 </html>
