--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -6,6 +6,6 @@
 <body>
     <h1>About Me</h1>
     <p>Welcome to the about me page.</p>
-    <p><a href="index.html">Home</a></p>
+    <p><a href="../index.html">Home</a></p>
 </body>
 </html>
