Frame work Done, Now content content content

--- a/research.html
+++ b/research.html
@@ -56,18 +56,15 @@
         </div>
         <!-- Buttons -->
         <div class="flex flex-row justify-between px-5 lg:px-96 text-xs lg:text-xl items-start">
-            <!-- Selected -->
+            <a href="education.html" class="btn py-2 px-2">Education</a>
+            <a href="work.html" class="btn py-2 px-2">Work</a>
             <div class="h-2 w-2 lg:h-4 lg:w-4 bg-2">
                 <div class="h-2 w-2 lg:h-4 lg:w-4 bg-1 rounded-tr-full"></div>
             </div>
-            <a href="education.html" class="btn-selected py-2 px-2">Education</a>
+            <a href="research.html" class="btn-selected py-2 px-2">Research</a>
             <div class="h-2 w-2 lg:h-4 lg:w-4 bg-2">
                 <div class="h-2 w-2 lg:h-4 lg:w-4 bg-1 rounded-tl-full"></div>
             </div>
-
-            <!-- Unselected -->
-            <a href="work.html" class="btn py-2 px-2">Work</a>
-            <a href="research.html" class="btn py-2 px-2">Research</a>
             <a href="readings.html" class="btn py-2 px-2">Readings</a>
             <a href="art.html" class="btn py-2 px-2">Art</a>
             <a href="music.html" class="btn py-2 px-2">Music</a>
