Main Tasks Done

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
         <!-- Buttons -->
         <div class="flex flex-row justify-between px-5 lg:px-96 text-xs lg:text-xl items-start">
             <!-- Selected -->
-            <div class="h-2 w-2 lg:h-4 lg:w-4 bg-2">
-                <div class="h-2 w-2 lg:h-4 lg:w-4 bg-1 rounded-tr-full"></div>
+            <div class="h-2 w-2 bg-2 ">
+                <div class="h-2 w-2 bg-1 rounded-tr-full"></div>
             </div>
             <a href="education.html" class="btn-selected py-2 px-2">Education</a>
-            <div class="h-2 w-2 lg:h-4 lg:w-4 bg-2">
-                <div class="h-2 w-2 lg:h-4 lg:w-4 bg-1 rounded-tl-full"></div>
+            <div class="h-2 w-2 bg-2 ">
+                <div class="h-2 w-2 bg-1 rounded-tl-full"></div>
             </div>
 
             <!-- Unselected -->
