--- a/readings.html
+++ b/readings.html
@@ -59,12 +59,12 @@
             <a href="education.html" class="btn py-2 px-2">Education</a>
             <a href="work.html" class="btn py-2 px-2">Work</a>
             <a href="research.html" class="btn py-2 px-2">Research</a>
-            <div class="h-2 w-2 lg:h-4 lg:w-4 bg-2">
-                <div class="h-2 w-2 lg:h-4 lg:w-4 bg-1 rounded-tr-full"></div>
+            <div class="h-2 w-2 bg-2 ">
+                <div class="h-2 w-2  bg-1 rounded-tr-full"></div>
             </div>
             <a href="readings.html" class="btn-selected py-2 px-2">Readings</a>
-            <div class="h-2 w-2 lg:h-4 lg:w-4 bg-2">
-                <div class="h-2 w-2 lg:h-4 lg:w-4 bg-1 rounded-tl-full"></div>
+            <div class="h-2 w-2 bg-2 ">
+                <div class="h-2 w-2  bg-1 rounded-tl-full"></div>
             </div>
             <a href="art.html" class="btn py-2 px-2">Art</a>
             <a href="music.html" class="btn py-2 px-2">Music</a>
