--- a/work.html
+++ b/work.html
@@ -57,12 +57,12 @@
         <!-- Buttons -->
         <div class="flex flex-row justify-between px-5 lg:px-96 text-xs lg:text-xl items-start">
             <a href="education.html" class="btn py-2 px-2">Education</a>
-            <div class="h-2 w-2 lg:h-4 lg:w-4 bg-2">
-                <div class="h-2 w-2 lg:h-4 lg:w-4 bg-1 rounded-tr-full"></div>
+            <div class="h-2 w-2 bg-2 ">
+                <div class="h-2 w-2  bg-1 rounded-tr-full"></div>
             </div>
             <a href="work.html" class="btn-selected py-2 px-2">Work</a>
-            <div class="h-2 w-2 lg:h-4 lg:w-4 bg-2">
-                <div class="h-2 w-2 lg:h-4 lg:w-4 bg-1 rounded-tl-full"></div>
+            <div class="h-2 w-2 bg-2 ">
+                <div class="h-2 w-2  bg-1 rounded-tl-full"></div>
             </div>
             <a href="research.html" class="btn py-2 px-2">Research</a>
             <a href="readings.html" class="btn py-2 px-2">Readings</a>
@@ -73,35 +73,29 @@
 
 
         <div class="flex flex-col w-screen md:px-96 py-10 gap-10">
-            <!-- Honors -->
+
+            <div class="text-2xl font-bold">
+                Current
+            </div>
+            
             <div class="flex flex-col">
                 <div class="flex flex-col lg:flex-row items-center gap-5">
                     <div class="w-24 h-24 md:w-40 md:h-40">
                         <img src="data/buet.png" alt="Profile Picture" class="rounded-full">
                     </div>
                     <div class="flex flex-col items-center md:items-start gap-1">
-                        <div class="text-xl md:text-3xl mt-[-0.5rem] text-center md:text-left">Bangladesh University of
-                            Engineering and Technology</div>
-                        <div class="text-sm md:text-xl">Bachelor in Computer Science and Engineering</div>
-                        <div class="text-sm md:text-xl">Graduated: 2024, CGPA: 3.9</div>
+                        <div class="text-xl md:text-3xl mt-[-0.5rem] text-center md:text-left">Research Assistant</div>
+                        <div class="text-sm md:text-xl">Applied Machine Learning Lab, BUET</div>
+                        <div class="text-sm md:text-xl">Android Test Automation (Funded by Samsung)</div>
                     </div>
                 </div>
             </div>
 
-            <!-- High School -->
-            <div class="flex flex-col">
-                <div class="flex flex-col lg:flex-row items-center gap-5">
-                    <div class="w-24 h-24 md:w-40 md:h-40">
-                        <img src="data/sos.jfif" alt="Profile Picture" class="rounded-full">
-                    </div>
-                    <div class="flex flex-col items-center md:items-start gap-1">
-                        <div class="text-xl md:text-2xl mt-[-0.5rem] text-center md:text-left">SOS Hermann Gmeiner
-                            College Dhaka</div>
-                        <div class="text-lg md:text-xl">High School</div>
-                        <div class="text-sm md:text-lg">Graduated: 2018, GPA: 5.0</div>
-                    </div>
-                </div>
-            </div>
+            <!-- <div class="text-2xl font-bold">
+                Past
+            </div> -->
+
+
         </div>
 
 
