--- a/readings.html
+++ b/readings.html
@@ -18,7 +18,9 @@
         <div class="flex flex-col py-10 px-5 md:px-20 lg:px-80 bg-2 w-full">
             <div class="flex flex-col md:flex-row justify-start gap-5 md:gap-10 items-center text-2">
                 <div class="w-24 h-24 md:w-40 md:h-40">
-                    <img src="data/myphoto.jpg" alt="Profile Picture" class="rounded-full border-white border-4">
+                    <a href="index.html">
+                        <img src="data/myphoto.jpg" alt="Profile Picture" class="rounded-full border-white border-4">
+                    </a>
                 </div>
                 <div class="flex flex-col items-center md:items-start gap-1">
                     <div class="text-3xl md:text-4xl mt-[-0.5rem] text-center md:text-left">Shamit Fatin</div>
